--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 
 :root {
-    --padding:  30px 80px;
+    --padding:  30px 80px 0;
     --Green: #B9FF66;
     --Gray: #F3F3F3;
     --Dark: #191A23;
@@ -76,7 +76,7 @@ header ul li button:hover {
 }
 
 .hero-text {
-    flex: 1;
+    width: 50%;
 }
 
 .hero-text h3 {
@@ -103,7 +103,7 @@ header ul li button:hover {
 }
 
 .hero-image {
-    flex: 1;
+    width: 50%;
 }
 
 /* Partnerships section*/
@@ -242,7 +242,7 @@ header ul li button:hover {
 .proposal-section {
     margin: 100px 0;
     width: 100%;
-    height: 347px;
+    /* height: 347px; */
     display: flex;
     justify-content: space-between;
     background-color: var(--Gray);
@@ -313,7 +313,7 @@ header ul li button:hover {
 
 .case-wrapper .case-study {
     padding: 0 40px;
-    
+    background-color: var(--Black);
 }
 
 .case-wrapper > .case-study:nth-child(2) {
@@ -323,12 +323,18 @@ header ul li button:hover {
 
 .case-study div {
     display: flex;
+    align-items: center;
     gap: 20px;
 }
 
 .case-study div p {
     color: var(--Green);
     font-size: 20px;
+}
+
+.case-study img {
+    width: 17px;
+    height: 17px;
 }
 
 /* Work process section */
@@ -350,6 +356,7 @@ header ul li button:hover {
     box-shadow: 1px 4px var(--Black);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border: 1px solid var(--Black);
     background-color: var(--Gray);
 }
@@ -374,4 +381,487 @@ header ul li button:hover {
     height: 58px;
     width: 58px;
     border-radius: 50%;
+}
+
+/* Team Section */
+.team-wrapper {
+    margin: 40px 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+}
+
+.team-member {
+    border-radius: 45px;
+    padding: 40px 35px;
+    border: 1px solid var(--Black);
+    box-shadow: 0 4px var(--Black);
+}
+
+.team-member .title {
+    display: flex;
+    gap: 30px;
+    /* align-items: flex-end; */
+    padding: 25px 0;
+    border-bottom: 2px solid var(--Black);
+}
+
+.team-img {
+    width: 120px;
+    height: 120px;
+    background-color: var(--Green);
+    box-shadow: 2px 4px var(--Black);
+    clip-path: polygon(
+        50% 0%, 61% 35%, 98% 35%, 68% 57%, 
+        79% 91%, 50% 70%, 21% 91%, 32% 57%, 
+        2% 35%, 39% 35%
+    );
+}
+
+div .circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--Black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle h2 {
+    color: var(--Green);
+    font-weight: bolder;
+    font-size: 30px;
+    margin: 0;
+}
+
+.team-member .title h5 {
+    font-size: 18px;
+}
+
+.team-member .title p,
+.team-member .title h5 {
+    margin: 1px;
+}
+
+.team-member .text {
+   margin: 25px 0;
+}
+
+.team-cta {
+    display: flex;
+    justify-content: flex-end;
+}
+
+button.see-team {
+    width: 250px;
+    background-color: var(--Black);
+    padding: 20px 35px;
+    border-radius: 14px;
+    border: none;
+    background-color: var(--Black);
+    color: var(--White);
+    font-size: 20px;
+}
+
+/* Testimonials section */ 
+.testimonials-section {
+    margin: 70px 0;
+}
+
+.testimonial-container {
+    margin: 30px 0;
+    width: 100%;
+    height: 620px;
+    border-radius: 45px;
+    padding: 70px 0;
+    background-color: var(--Black);
+    color: var(--White);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.testimonial-wrapper {
+    display: flex;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    gap: 50px;
+}
+
+.testimonial-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+.testimonial-card-message {
+    border: 1px solid var(--Green);
+    border-radius: 45px;
+    padding: 50px;
+    width: 600px;
+}
+
+.testimonial-card h6 {
+    color: var(--Green);
+    font-size: 20px;
+    margin-bottom: 1px;
+    margin-left: 70px;
+}
+
+.testimonial-card .role-title {
+    margin-left: 70px;
+    margin-top: 1px;
+}
+
+.controls {
+   background-color: #000000;
+   display: flex;
+   justify-content: space-around;
+}
+
+.controls svg {
+    fill: #FFFFFF;
+}
+
+
+/* Contact us section */
+.contact-form {
+    margin: 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 45px;
+    background-color: var(--Gray);
+    padding: 60px 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+.contact-form form {
+    flex-basis: 50%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contact-options {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact-options div {
+    display: flex;
+    align-items: center;
+}
+
+.contact-options input {
+    width: 28px;
+    height: 28px;
+}
+
+.contact-options input:checked {
+    accent-color: var(--Green);
+}
+
+.contact-input {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contact-input label {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.contact-input input {
+    width: 100%;
+    height: 60px;
+    border-radius: 14px;
+    padding: 18px 30px;
+}
+
+.contact-form textarea {
+    width: 100%;
+    height: 200px;
+    padding: 18px 30px;
+    border-radius: 14px;
+}
+
+.contact-form img {
+    height: 600px;
+    position: absolute;
+    right: -290px;
+}
+
+.contact-form button {
+    width: 100%;
+    height: 70px;
+    padding: 20px 30px;
+    border-radius: 14px;
+    color: var(--White);
+    background-color: var(--Black);
+    border: none;
+}
+
+.contact-form button:hover {
+    opacity: 0.8;
+}
+
+footer {
+    margin: 150px 0 0 0;
+    background-color: var(--Black);
+    color: #F3F3F3;
+    border-radius: 45px 45px 0 0;
+    padding: 50px 60px;
+}
+
+.footer-links-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-links-wrapper ul {
+    display: flex;
+    list-style: none;
+    gap: 40px;
+}
+
+.footer-links-wrapper li a {
+    color: var(--Gray);
+    font-size: 18px;
+}
+
+.footer-links-wrapper .cta {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.footer-links-wrapper button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+footer .contact-info-wrapper {
+    margin: 30px 0 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 40px;
+    border-bottom: 1px solid var(--White);
+}
+
+.contact-info {
+    flex-basis: 1;
+}
+
+footer h4 {
+    background-color: var(--Green);
+    color: #000000;
+    font-weight: 500;
+    padding: 0 5px;
+    border-radius: 5px;
+    width: fit-content;
+}
+
+footer form {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 60px 40px;
+    background-color: #292A32;
+}
+
+footer form input {
+    width: 290px;
+    height: 67px;
+    padding: 33px 35px;
+    background-color: transparent;
+    border-radius: 14px;
+    border: 1px solid var(--White);
+}
+
+footer form input::placeholder {
+    color: var(--White);
+}
+
+footer form button {
+    width: 249px;
+    height: 68px;
+    padding: 20px 35px;
+    background-color: var(--Green);
+    color: var(--Black);
+    border-radius: 14px;
+    font-size: 20px;
+}
+
+footer span {
+    font-size: 18px;
+    padding-right: 35px;
+}
+
+footer a.privacy {
+    color: var(--White);
+}
+
+
+
+@media (max-width:600px) {
+    body{
+        padding: 30px 10px 0;
+    }
+
+    header ul {
+        display: none;
+    }
+    
+    .hero-section {
+        flex-direction: column;
+    }
+
+    .hero-text {
+        width: 100%;
+    }
+
+    .hero-image,
+    .hero-image img {
+        width: 100%;
+    }
+
+    .partners-section {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+    }
+    
+    .services-intro,
+    .case-studies_intro  {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .services-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .service-card {
+        flex-direction: column;
+    }
+
+    .proposal-section {
+        flex-direction: column;
+        padding: 0 20px;
+    }
+
+    .proposal-section img {
+        order: -1;
+    }
+
+    .case-wrapper {
+        background-color: transparent;
+        overflow-x: scroll;
+        scrollbar-width: none;
+        padding: 20px;
+        border-radius: 0;
+        gap: 30px;
+    }
+
+    .case-wrapper::-webkit-scrollbar {
+        display: none;
+    }
+
+    .case-wrapper .case-study *{
+        padding: 20px;
+        border-radius: 15px;
+        width: 400px;  
+    }
+
+    .work-tab {
+        padding: 41px 30px;
+    }
+
+    .work-tab div h1 {
+        font-size: 45px;
+    }
+
+    .work-tab div h2 {
+        font-size: 20px;
+    }
+
+    .team-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .team-cta {
+        justify-content: center;
+    }
+
+    .testimonial-card-message {
+        width: 350px;
+        padding: 10px;
+    }
+
+    .contact-form {
+        padding: 25px;
+    }
+
+    .contact-form form {
+        flex-basis: 100%;
+    }
+
+    .contact-options {
+        padding: 10px 20px;
+        justify-content: space-between;
+    }
+
+    .contact-form img {
+        display: none;
+    }
+
+    footer {
+        padding: 20px;
+    }
+
+    .footer-links-wrapper,
+    .footer-links-wrapper ul {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .footer-links-wrapper .cta {
+        order: 3;
+    }
+
+    footer .contact-info-wrapper  {
+        gap: 20px;
+        flex-direction: column;
+    }
+
+    footer .contact-info-wrapper h4,
+    footer .contact-info-wrapper p {
+        text-align: center;
+    }
+
+    footer form {
+        flex-direction: column;
+        width: 98%;
+        border-radius: 20px;
+    }
+
+    footer form button {
+        width: 290px;
+    }
+
+    footer span, 
+    footer a.privacy {
+        text-align: center;
+        display: block;
+        font-size: 14px;
+        margin: 6px 0;
+    }
 }
