--- a/index.css
+++ b/index.css
@@ -396,6 +396,13 @@ header button {
     height: 58px;
     width: 58px;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.work-tab .minus-icon {
+    display: none;
 }
 
 .work-tab p {
